[package]
name = "baguette-spritesheet-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baguette = { path = "D:/dev/Rust/baguette"}
rfd = "*"
egui_extras =  { version = "*", features = ["all_loaders"] }
egui_plot = "*"
#image = { version = "0.24", default-features = false, features = ["png"] }
indexmap = "*"